<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/flHelpDialogLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginHorizontal="@dimen/spacing_m"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/spacing_xxl"
        android:paddingVertical="@dimen/default_margin">

        <TextView
            android:id="@+id/tvHelpDialogTitle"
            style="@style/TextStylePopupHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHelpDialogLine1"
            style="@style/TextStylePopupFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_s"
            android:text="@string/help_dialog_line1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelpDialogTitle" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHelpDialogLine1"
            app:singleSelection="true">

            <Button
                android:id="@+id/button1"
                style="@style/OutlinedButton"
                android:text="@string/help_dialog_bnt1_label"
                app:cornerRadius="@dimen/btn_radius" />

            <Button
                android:id="@+id/button2"
                style="@style/OutlinedButton"
                android:text="@string/help_dialog_bnt2_label" />

            <Button
                android:id="@+id/button3"
                style="@style/OutlinedButton"
                android:text="@string/help_dialog_bnt3_label" />

            <Button
                android:id="@+id/button4"
                style="@style/OutlinedButton"
                android:text="@string/help_dialog_bnt4_label"
                app:cornerRadius="@dimen/btn_radius" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <TextView
            android:id="@+id/tvHelpDialogLine2"
            style="@style/TextStylePopupFieldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/help_dialog_line2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAmount"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:elevation="5dp"
            app:boxBackgroundColor="@color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHelpDialogLine2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:gravity="center_horizontal"
                android:hint="@string/til_amount_hint"
                android:inputType="number"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSend"
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:text="@string/btn_send_label"
            app:cornerRadius="@dimen/btn_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAmount"
            app:strokeColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/OutlinedButton"
            android:layout_width="wrap_content"
            android:text="@string/btn_cancel_label"
            app:cornerRadius="@dimen/btn_radius"
            app:layout_constraintEnd_toStartOf="@id/btnSend"
            app:layout_constraintTop_toBottomOf="@id/tilAmount"
            app:strokeColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>